<resources>
    <string name="app_name">Shused</string>
    <string name="copyright_string">Copyright \u00a9 2023 Ball of Knives</string>
    <string name="welcome_text_001">Welcome to Shused!</string>
    <string name="welcome_text_002">Here you can shop preowned shoes</string>
    <string name="welcome_text_003">Reduce trash, save money, look stylish</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register</string>
    <string name="next">Next</string>
    <string name="how_to_shuse">How to shuse</string>
    <string name="instructions_text_001">lorem ipsum blah blah blah</string>
    <string name="instructions_text_002">hocus pocus dingledore</string>
    <string name="instructions_text_003">one foot two foot red foot blue foot</string>
    <string name="navigate_to_shoe_detail">Navigate to shoe detail</string>
    <string name="new_shoe_title">Add a new shoe</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_brand">Shoe Brand</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="logout">Logout</string>
    <string name="picture_of_skateboard_shoes">picture of skateboard shoes</string>
</resources>