<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoestoreinventory.InstructionsFragment">

    <!-- A relatively simple layout. A list of things to show one on top of another.
    LinearLayout is a good choice for this.
    Layout will need to be different for landscape. See landscape layout for that implementation. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/instructions_frag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:text="@string/how_to_shuse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/instructions_frag_text_001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/instructions_text_001"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/instructions_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/dcshoes" />

        <TextView
            android:id="@+id/instructions_frag_text_002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/instructions_text_002"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/instructions_frag_text_003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/instructions_text_003"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/instructions_next_button"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/next" />

    </LinearLayout>

</layout>