<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shoestoreinventory.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/welcome_frag_text_001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/aclonica"
            android:text="@string/welcome_text_001"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/bikeshoesquare" />

            <TextView
                android:id="@+id/welcome_frag_text_002"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/welcome_text_002"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/welcome_frag_text_003"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/welcome_text_003"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/welcome_next_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/next" />

    </LinearLayout>

</layout>